[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Code/Game/Menu/CreditsPortal.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Menu/Background.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/Menu/Overlay.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/Menu/Title.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/Menu/GodotButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/Menu/websiteIcon.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/Menu/licenseIcon.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/Menu/BackButton.png" type="Texture" id=8]

[node name="CreditsPortal" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_lock_": true
}

[node name="BackgroundOverlay" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -65.0
margin_right = 63.0
margin_bottom = -10.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="GodotButton" type="TextureButton" parent="." groups=[
"Button",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.0
margin_top = -6.0
margin_right = 43.0
margin_bottom = 39.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="WebsiteButton" type="TextureButton" parent="GodotButton" groups=[
"Button",
]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 45.0
margin_top = -22.0
margin_right = 67.0
margin_bottom = -2.0
texture_normal = ExtResource( 6 )

[node name="LicenseButton" type="TextureButton" parent="GodotButton" groups=[
"Button",
]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 69.0
margin_top = -22.0
margin_right = 91.0
margin_bottom = -2.0
texture_normal = ExtResource( 7 )

[node name="BackButton" type="TextureButton" parent="." groups=[
"Button",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = 19.0
margin_right = 33.0
margin_bottom = 64.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}
